--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -149,7 +149,7 @@
                         <img src="./assets/img/yt-covers/tifa-yt-cover.png" alt="video0">
                         <div class="video-titles">
                           <svg viewBox="0 0 32 32" fill="currentColor" width="32" height="32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <path id="playIcon" d="" />
+                            <path id="playIcon" d="M29.05 14.3113 11.04 3.2938a2 2 0 0 0-2.025-0.0375A1.9825 1.9825 0 0 0 8 4.9838v22.0325A1.9925 1.9925 0 0 0 10 29a2.0088 2.0088 0 0 0 1.045-0.2937L29.05 17.6888a1.9763 1.9763 0 0 0 0-3.3775zM10 26.9925V5l17.9788 11z" />
                           </svg>
                           Cloud and Tifa
                         </div>
@@ -167,7 +167,7 @@
                         <img src="./assets/img/yt-covers/tifa-lyric-yt-cover.jpg" alt="video0">
                         <div class="video-titles">
                           <svg viewBox="0 0 32 32" fill="currentColor" width="32" height="32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <path id="playIcon" d="" />
+                            <path id="playIcon" d="M29.05 14.3113 11.04 3.2938a2 2 0 0 0-2.025-0.0375A1.9825 1.9825 0 0 0 8 4.9838v22.0325A1.9925 1.9925 0 0 0 10 29a2.0088 2.0088 0 0 0 1.045-0.2937L29.05 17.6888a1.9763 1.9763 0 0 0 0-3.3775zM10 26.9925V5l17.9788 11z" />
                           </svg>
                           Cloud and Tifa (Lyric Video)
                         </div>
@@ -185,7 +185,7 @@
                         <img src="./assets/img/yt-covers/mosquito-yt-cover.jpg" alt="video0">
                         <div class="video-titles">
                           <svg viewBox="0 0 32 32" fill="currentColor" width="32" height="32" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <path id="playIcon" d="" />
+                            <path id="playIcon" d="M29.05 14.3113 11.04 3.2938a2 2 0 0 0-2.025-0.0375A1.9825 1.9825 0 0 0 8 4.9838v22.0325A1.9925 1.9925 0 0 0 10 29a2.0088 2.0088 0 0 0 1.045-0.2937L29.05 17.6888a1.9763 1.9763 0 0 0 0-3.3775zM10 26.9925V5l17.9788 11z" />
                           </svg>
                           Bad Mosquitoes
                         </div>
