--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 
     <meta property="og:url" content="{{ site.url }}" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="{{ "/assets/img/10-4-24_cloti-zineprint-wide-social.jpeg" | absolute_url }}" />
+    <meta property="og:image" content="{{ "/assets/img/hero/vampire-seranade/serana-wide.jpg" | absolute_url }}" />
     <meta property="og:title" content="Jezuro Official Website" />
     <meta property="og:description"
         content='The official website of Jezuro. Latest single “Cloud and Tifa” out now. Visit for music, videos, and more.' />
@@ -25,7 +25,7 @@
     <meta name="twitter:description"
         content='The official website of Jezuro. Latest single “Cloud and Tifa” out now. Visit for music, videos, and more.'>
     <meta name="twitter:title" content="Jezuro Official Website">
-    <meta name="twitter:image" content="{{ "/assets/img/10-4-24_cloti-zineprint-wide-social.jpeg" | absolute_url }}" />
+    <meta name="twitter:image" content="{{ "/assets/img/hero/vampire-seranade/serana-wide.jpg" | absolute_url }}" />
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="{{ site.url }}" />
 
@@ -79,21 +79,22 @@
         </div>
         <div class="cta-wrapper">
           <div class="background_desktop">
-            <img src="./assets/img/10-4-24_cloti-zineprint-wide.jpg" alt="Cloud and Tifa Single background image">
+            <img src="./assets/img/hero/vampire-seranade/serana-wide.jpg" alt="Vampire Seranade Single background image">
           </div>
           <div class="background_mobile">
-            <img src="./assets/img/10-4-24_cloti-zineprint-mobile-crop.jpg" alt="Cloud and Tifa Single background image">
+            <img src="./assets/img/hero/vampire-seranade/serana-portrait.jpg" alt="Vampire Seranade Single background image">
           </div>
           <div class="content_left_wrapper">
-            <div class="img_caption">"Stargazing" by Reishichi</div>
+            <div class="img_caption"></div>
           </div>
           <div class="content_wrapper">
             <div class="cta_wrapper_title">  
-              <span class="ctatitle line1">Cloud and Tifa</span>
+              <span class="ctatitle line1">Vampire Seranade</span>
+              <span class="ctatitle line2">March 6</span>
             </div>
             <div class="cta_wrapper_listen_btn">
               <div class="listen-now">
-                <a custom-link-name="Cloud and Tifa Single Listen Now Button (header)" href="https://distrokid.com/hyperfollow/jezuro/cloud-and-tifa" target="_blank">LISTEN NOW</a>
+                <a custom-link-name="Cloud and Tifa Single Listen Now Button (header)" href="https://distrokid.com/hyperfollow/jezuro/vampire-seranade" target="_blank">PRESAVE NOW</a>
               </div>
             </div>
           </div>
@@ -113,7 +114,18 @@
                 <div class="swiper-slide">
                   <div class="item">
                     <div class="art">
-                      <img src="./assets/img/upscaled_1500.jpg" alt="album art ">
+                      <img src="./assets/img/releases/cloud-and-tifa.jpg" alt="album art ">
+                    </div>
+                    <div class="song-title">Cloud and Tifa</div>
+                    <div class="get-it-now">
+                      <a href="https://distrokid.com/hyperfollow/jezuro/cloud-and-tifa" target="_blank">listen now</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="item">
+                    <div class="art">
+                      <img src="./assets/img/releases/bad-mosquitoes.jpg" alt="album art ">
                     </div>
                     <div class="song-title">Bad Mosquitoes</div>
                     <div class="get-it-now">
