--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -250,7 +250,6 @@ span.site-menu {
   transform: translate(-50%, -50%);
   z-index: 9;
   position: absolute;
-  text-shadow: 0px 0px 20px #000000;
 }
 
 .logo img {
@@ -264,6 +263,7 @@ span.site-menu {
   width: 100%;
   display: block;
   font-size: 3.07vw;
+  text-shadow: 0px 0px 20px #000000;
 }
 
  .logo.mobileLogo {
@@ -293,6 +293,8 @@ h2#site-name {
 
   .logo a {
     font-size: 5vw;
+    text-shadow: 0px 0px 20px #fff;
+    color: #000;
   }
 
   .logo.desktopLogo {
