--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -456,6 +456,7 @@ h2#site-name {
   display: inline;
   background: #fff;
   color: #000000;
+  border: solid 5px #000;
   text-align: center;
   line-height: 1;
   height: auto;
