--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,20 +10,20 @@
     <meta name="robots" content="noai">
     <meta name="keywords" content="Jezuro" />
     <meta name="description"
-        content='The official website of Jezuro. Latest single “Cloud and Tifa” out now. Visit for music, videos, and more.' />
+        content='The official website of Jezuro. “Cloud and Tifa” out now. "Vampire Seranade" drops 3/6. Visit for music, videos, and more.' />
 
     <meta property="og:url" content="{{ site.url }}" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="{{ "/assets/img/hero/vampire-seranade/serana-wide.jpg" | absolute_url }}" />
     <meta property="og:title" content="Jezuro Official Website" />
     <meta property="og:description"
-        content='The official website of Jezuro. Latest single “Cloud and Tifa” out now. Visit for music, videos, and more.' />
+        content='The official website of Jezuro. “Cloud and Tifa” out now. "Vampire Seranade" drops 3/6. Visit for music, videos, and more.' />
     <meta property="og:site_name" content="Jezuro" />
 
     <meta name="twitter:site" content="@jezuromusic">
     <meta name="twitter:url" content="{{ site.url }}">
     <meta name="twitter:description"
-        content='The official website of Jezuro. Latest single “Cloud and Tifa” out now. Visit for music, videos, and more.'>
+        content='The official website of Jezuro. “Cloud and Tifa” out now. "Vampire Seranade" drops 3/6. Visit for music, videos, and more.'>
     <meta name="twitter:title" content="Jezuro Official Website">
     <meta name="twitter:image" content="{{ "/assets/img/hero/vampire-seranade/serana-wide.jpg" | absolute_url }}" />
     <meta name="twitter:card" content="summary_large_image">
@@ -39,7 +39,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dela+Gothic+One&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="{{ "/assets/img/favicon.jpg" | relative_url }}" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ "/assets/img/favicons/apple-touch-icon.png" | relative_url }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/img/favicons/favicon-32x32.png" | relative_url }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/img/favicons/favicon-16x16.png" | relative_url }}">
+    <link rel="manifest" href="{{ "/assets/img/favicons/site.webmanifest" | relative_url }}">
   </head>
   <body>
     <div class="container">
