--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,40 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/img/favicons/favicon-32x32.png" | relative_url }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/img/favicons/favicon-16x16.png" | relative_url }}">
     <link rel="manifest" href="{{ "/assets/img/favicons/site.webmanifest" | relative_url }}">
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "VideoObject",
+        "name": "Cloud and Tifa",
+        "description": "A song about everything they never said, but didn't have to.",
+        "thumbnailUrl": "https://jezuro.com/assets/img/yt-covers/tifa-yt-cover.png",
+        "uploadDate": "2026-01-12T12:00EST",
+        "contentUrl": "https://www.youtube.com/watch?v=iUGhCsXL5fs"
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "VideoObject",
+        "name": "Cloud and Tifa (Lyric Video)",
+        "description": "A song about everything they never said, but didn't have to.",
+        "thumbnailUrl": "https://jezuro.com/assets/img/yt-covers/tifa-lyric-yt-cover.png",
+        "uploadDate": "2026-01-19T12:00EST",
+        "contentUrl": "https://www.youtube.com/watch?v=Azs0CTwvtfs"
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "VideoObject",
+        "name": "Bad Mosquitoes",
+        "description": "",
+        "thumbnailUrl": "https://jezuro.com/assets/img/yt-covers/mosquito-yt-cover.png",
+        "uploadDate": "2025-11-21T12:00EST",
+        "contentUrl": "https://www.youtube.com/watch?v=ZUvzxExwSkc"
+      }
+    </script>
   </head>
   <body>
     <div class="container">
