--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <meta name="robots" content="noai">
     <meta name="keywords" content="Jezuro" />
     <meta name="description"
-        content='The official website of Jezuro. “Cloud and Tifa” out now. "Vampire Seranade" drops 3/6. Visit for music, videos, and more.' />
+        content='“Cloud and Tifa” out now. "Vampire Seranade" drops 3/6. Visit for music, videos, and more.' />
 
     <meta property="og:url" content="{{ site.url }}" />
     <meta property="og:type" content="website" />
