--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,13 +17,13 @@
     <meta property="og:image" content="{{ "/assets/img/hero/vampire-seranade/serana-wide.jpg" | absolute_url }}" />
     <meta property="og:title" content="Jezuro Official Website" />
     <meta property="og:description"
-        content='The official website of Jezuro. “Cloud and Tifa” out now. "Vampire Seranade" drops 3/6. Visit for music, videos, and more.' />
+        content='“Cloud and Tifa” out now. "Vampire Seranade" drops 3/6. Visit for music, videos, and more.' />
     <meta property="og:site_name" content="Jezuro" />
 
     <meta name="twitter:site" content="@jezuromusic">
     <meta name="twitter:url" content="{{ site.url }}">
     <meta name="twitter:description"
-        content='The official website of Jezuro. “Cloud and Tifa” out now. "Vampire Seranade" drops 3/6. Visit for music, videos, and more.'>
+        content='“Cloud and Tifa” out now. "Vampire Seranade" drops 3/6. Visit for music, videos, and more.'>
     <meta name="twitter:title" content="Jezuro Official Website">
     <meta name="twitter:image" content="{{ "/assets/img/hero/vampire-seranade/serana-wide.jpg" | absolute_url }}" />
     <meta name="twitter:card" content="summary_large_image">
