--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,13 +39,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dela+Gothic+One&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <!-- favicons -->
-    <link rel="icon" type="image/png" href="/assets/img/favicons/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/assets/img/favicons/favicon.svg" />
-    <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png" />
+
+    <link rel="icon" type="image/png" href="/assets/img/favicons/favicon-96x96.png?asdf" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/assets/img/favicons/favicon.svg?asdf" />
+    <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico?asdf" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicons/apple-touch-icon.png?asdf" />
     <meta name="apple-mobile-web-app-title" content="Jezuro" />
-    <link rel="manifest" href="/assets/img/favicons/site.webmanifest" />
+    <link rel="manifest" href="/assets/img/favicons/site.webmanifest?asdf" />
 
 
     <script type="application/ld+json">
